# zpass

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cli/: handler.rs  mod.rs  parser.rs  run.rs
src/safe/: collection.rs  constants.rs  crypto.rs  mod.rs  preference.rs  vault.rs
